--- a/table.html
+++ b/table.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" type="text/css" href="./nav/webapp/css/custom.css?v=3" />
 	<link rel="stylesheet" type="text/css" href="./css/indexDefault.css">
 	<link rel="stylesheet" type="text/css" href="./css/public_style.css">
+	<link rel="stylesheet" href="//at.alicdn.com/t/font_790454_cbl6qmgfsu8.css">
 	<!-- JQUERY -->
 	<script type="text/javascript" src="./js/jquery/jquery-2.0.3.min.js"></script>
 	<script type="text/javascript" src="./js/jquery.form.js"></script>
@@ -51,24 +52,157 @@
 	<!-- PAGE -->
 	<section id="page">
 		<div id="main-content">
+			<!-- CONTENT -->
 			<div class="container">
-				<div class="separator"></div>
-				<!-- DATA TABLES -->
+
+				<!-- 默认模块 -->
 				<div class="row">
 					<div class="col-md-12">
 						<!-- BOX -->
 						<div class="box border green">
 							<div class="box-title">
 								<h4>
-									<i class="fa fa-table"></i>城市信息
+									<i class="fa fa-table"></i>默认Title
 								</h4>
-								<div class="tools hidden-xs"></div>
+								<div class="tools">
+								</div>
 							</div>
-							<!-- /BOX -->
+							<div class="box-body">
+								<p>每一个大的独立模块，复制本模块</p>
+								<p><<span>!</span>-- 默认模块--></p>
+								<p>class="row",开始</p>
+							</div>							
 						</div>
+						<!-- /BOX -->
 					</div>
 				</div>
-				<!-- /DATA TABLES -->
+				<!-- /默认模块 -->
+
+				<!-- 默认多个模块 -->
+				<div class="row">
+
+					<div class="col-md-6">
+						<div class="box border green">
+							<div class="box-title">
+								<h4>
+									<i class="fa fa-table"></i>col-md-6
+								</h4>
+								<div class="tools">
+									<a class="add" href="#" target="addParking" title="新增车辆信息">
+										<i class="fa fa-plus"></i>新增
+									</a>
+								</div>
+							</div>
+							<div class="box-body">
+								<p>每一个大的独立模块，复制本模块</p>
+								<p><<span>!</span>-- 默认模块--></p>
+								<p>class="row",开始</p>
+							</div>							
+						</div>
+					</div>
+
+					<div class="col-md-6">
+						<div class="box border green">
+							<div class="box-title">
+								<h4>
+									<i class="fa fa-table"></i>col-md-6
+								</h4>
+								<div class="tools">
+									<a class="add" target="addParking" title="新增车辆信息">
+										<i class="fa fa-plus"></i>新增
+									</a>
+									<!-- Split button -->
+									<div class="btn-group">
+										<span type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+											<i class="iconfont icon-gengduo2"></i>
+										</span>
+										<ul class="dropdown-menu">
+											<li><a href="#">Action</a></li>
+											<li><a href="#">Another action</a></li>
+											<li><a href="#">Something else here</a></li>
+											<li role="separator" class="divider"></li>
+											<li><a href="#">Separated link</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<div class="box-body">
+								<p>每一个大的独立模块，复制本模块</p>
+								<p><<span>!</span>-- 默认模块--></p>
+								<p>class="row",开始</p>
+							</div>							
+						</div>
+					</div>
+
+				</div>
+				<!-- /默认多个模块 -->
+
+				<!-- 默认3个模块 -->
+				<div class="row">
+
+					<div class="col-md-4">
+						<div class="box border green">
+							<div class="box-title">
+								<h4>
+									<i class="fa fa-table"></i>col-md-4
+								</h4>
+								<div class="tools">
+									<a class="add" href="#" target="addParking" title="新增车辆信息">
+										<i class="fa fa-plus"></i>新增
+									</a>
+								</div>
+							</div>
+							<div class="box-body">
+								<p>每一个大的独立模块，复制本模块</p>
+								<p><<span>!</span>-- 默认模块--></p>
+								<p>class="row",开始</p>
+							</div>							
+						</div>
+					</div>
+
+					<div class="col-md-4">
+						<div class="box border green">
+							<div class="box-title">
+								<h4>
+									<i class="fa fa-table"></i>col-md-4
+								</h4>
+								<div class="tools">
+									<a class="add" href="#" target="addParking" title="新增车辆信息">
+										<i class="fa fa-plus"></i>新增
+									</a>
+								</div>
+							</div>
+							<div class="box-body">
+								<p>每一个大的独立模块，复制本模块</p>
+								<p><<span>!</span>-- 默认模块--></p>
+								<p>class="row",开始</p>
+							</div>							
+						</div>
+					</div>
+
+					<div class="col-md-4">
+						<div class="box border green">
+							<div class="box-title">
+								<h4>
+									<i class="fa fa-table"></i>col-md-4
+								</h4>
+								<div class="tools">
+									<a class="add" href="#" target="addParking" title="新增车辆信息">
+										<i class="fa fa-plus"></i>新增
+									</a>
+								</div>
+							</div>
+							<div class="box-body">
+								<p>每一个大的独立模块，复制本模块</p>
+								<p><<span>!</span>-- 默认模块--></p>
+								<p>class="row",开始</p>
+							</div>							
+						</div>
+					</div>
+					
+				</div>
+				<!-- /默认3个模块 -->
+
 			</div>
 			<!-- /CONTENT-->
 		</div>
