--- a/tabs.html
+++ b/tabs.html
@@ -21,7 +21,8 @@
     <link rel="stylesheet" type="text/css" href="./nav/webapp/css/head.css?v=3" />
     <link rel="stylesheet" type="text/css" href="./nav/webapp/css/custom.css?v=3" />
 	<link rel="stylesheet" type="text/css" href="./css/indexDefault.css">
-	<link rel="stylesheet" type="text/css" href="./css/public_style.css">
+    <link rel="stylesheet" type="text/css" href="./css/public_style.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_790454_cbl6qmgfsu8.css">
 	<!-- JQUERY -->
 	<script type="text/javascript" src="./js/jquery/jquery-2.0.3.min.js"></script>
 	<script type="text/javascript" src="./js/jquery.form.js"></script>
@@ -57,13 +58,16 @@
 				<div class="row">
 					<div class="col-md-12">
 						<!-- BOX -->
-						<div class="box border green">
+						<div class="box border">
 							<div class="box-title">
 								<h4>
 									<i class="fa fa-table"></i>城市信息
 								</h4>
 								<div class="tools hidden-xs"></div>
-							</div>
+                            </div>
+                            <div class="box-body">
+
+                            </div>
 							<!-- /BOX -->
 						</div>
 					</div>
